fixed schedule hover jumping effect, removed search filter in pricelist, applied price-sub under the schedule

--- a/src/components/Pricelist/Pricelist.scss
+++ b/src/components/Pricelist/Pricelist.scss
@@ -55,8 +55,9 @@ $control-h: 2.7rem;
 }
 
 .price-sub {
-  margin: 0;
+  margin-bottom: 1.2rem;
   font-size: 0.95rem;
+  font-weight: 600;
   color: $muted;
   text-align: left;
 }
